fixes build.sbt warnings